...
  <string name="logger_discard">Discard workout</string>
  <string name="logger_discard_title">Discard this workout?</string>
  <string name="logger_discard_body">Everything logged in this session will be lost.</string>
  <string name="logger_discard_confirm">Discard</string>
  <string name="logger_discard_cancel">Keep logging</string>
  <string name="logger_add_exercises">Add exercises</string>
  <string name="logger_add_set">Add set</string>
  <string name="cd_minimize">Minimize workout</string>
  <string name="cd_rename">Rename workout</string>
  <string name="cd_more">More options</string>
  <string name="cd_complete_set">Log set</string>
  <string name="cd_reopen_set">Undo logged set</string>
  <string name="cd_remove_set">Remove set</string>

  <string name="col_set">Set</string>
  <string name="col_previous">Previous</string>
  <string name="col_reps">Reps</string>
...

  <string name="edit_done">Done</string>
  <string name="edit_start">Start %1$s</string>
  <string name="edit_end">End %1$s</string>
  <string name="edit_start_title">Started at</string>
  <string name="edit_end_title">Ended at</string>
  <string name="dialog_ok">OK</string>
  <string name="edit_open_title">Remove sets not logged?</string>
  <plurals name="edit_open_sets">
    <item quantity="one">%1$d set isn’t logged and will be removed from this workout.</item>
    <item quantity="other">%1$d sets aren’t logged and will be removed from this workout.</item>
  </plurals>
  <string name="edit_open_confirm">Remove</string>
...
